--- a/MATH361_Rough_Draft.Rmd
+++ b/MATH361_Rough_Draft.Rmd
@@ -22,9 +22,19 @@ library(knitr)
 ```
 
 # Introduction
-A bike share system – or simply bike share – is a service available to residents and tourists of many North American cities. Bike share connects riders with bikes which they can rent and ride from their smartphone. People choose ride share for commuting and for leisure; along with other modes like private car, ride share, mass- and micro- transit, bike share is one option within a suite of transportation options,  designed by planners and engineers to get people where they need to go. 
+A bike share system – or simply bike share – is a service available to residents and tourists of many North American cities. Bike share connects riders with bikes which they can borrow from their smartphone. People choose ride share for commuting and for leisure; along with other modes of transportation like private car, ride share, mass- and micro- transit, bike share is one option within a suite of transportation options,  designed by planners and engineers to get people where they need to go. 
 
-The interaction between weather and ridership is intuitive. Favorable weather is marked by sunshine, warm temperatures, moderate humidity, and low wind speed. Humanity's proclivity for the outdoors is highest when the weather is uneventful. When the weather outside is frightful -- think freezing temperatures, gusty, and rainy conditions -- we prefer the indoors. Especially in the United States with its auto-centric development patterns, poor weather often justifies a ``mode-shift'' for those who own a car. When the weather is poor and the infrastructure allows for it, why not drive!?
+The interaction between weather and ridership is intuitive. Favorable weather is marked by sunshine, warm temperatures, moderate humidity, and low wind speed. People like the outdoors when the weather is uneventful. When the weather outside is frightful -- think freezing temperatures, gusty, and rainy conditions -- we prefer the indoors. Especially in the United States with its auto-centric development patterns, poor weather often justifies a "mode-shift" for those who own a car. When the weather is poor and the infrastructure allows for it, why not drive?
+
+Below are our scatterplots for the candidates for the response variables with respect to their day number. We chose ``total_trips`` based on the roughly-normal distribution of the data without transformation. Further down are our scatterplots which justify this choice. Notice that log-transforming works on the other two variables, but the interpretation is harder. For now we will focus on ``total_trips``.
+
+In this paper, we will fit a regression model to several variables describing the weather in order to predict daily bicycle ridership by trip. Seattle has a reputation as a rainy city, and it’s for good reason. There were 287 rainy days between 10/13/2014 and 08/30/2016, a total of 689 days, or 41\% of the days. Bike share was active in Seattle over those 689 days, totaling 236,044 trips across the system.
+
+# Exploratory Data Analysis
+
+## Outliers
+
+
 
 ```{r mapping, include=FALSE}
 trip = read_csv('pronto-cycle-share-trip-data.csv')
@@ -71,9 +81,69 @@ mtext("Days since 13 October 2014", side = 1, line = -2, outer = TRUE)
 par(mfrow=c(1,1))
 plot(df$day_number, df$total_durations / df$total_trips, xlab="Days since 13 October 2014", ylab = "Average Bike Ridership (secs)")
 ```
-In this paper, we will fit a regression model to several variables describing the weather in order to predict daily bicycle ridership by trip. We will later consider trip duration as our dependent variable. Seattle has a reputation as a rainy city, and it’s for good reason. There were 287 rainy days between 10/13/2014 and 08/30/2016, a total of 689 days, or 41\% of the days. Yet bike share was active in Seattle over those 689 days, totaling 236,044 trips across the system.
+
+```{r plot_hist, echo = FALSE}
+par(mfrow=c(1,2)); hist(df$total_trips); hist(log(df$total_trips))
+par(mfrow=c(1,2)); hist(df$total_durations); hist(log(df$total_durations))
+par(mfrow=c(1,2)); hist(df$total_durations / df$total_trips); hist(log(df$total_durations / df$total_trips))
+```
 
 
+
+## Data selection
+
+The \texttt{trip} data frame contains 175,091 cases (or rides) and 12 variables describing each ride. The weather data frame contains 689 cases (or days) and 21 variables describing the weather that day. Ultimately, our goal is to join these two data frames. We began by aggregating trip data for each day we have data for. 
+
+From the \texttt{trip} data frame, we selected only two variables: \texttt{start\_time} and \texttt{tripduration}. We stripped the date from the \texttt{start\_time} (encoded in the format \texttt{\%m/\%d/\%Y \%H:\%M}), collected the unique dates, and mapped unique dates to the natural numbers. The mapping was represented by a new variable called \texttt{day\_number}. Now, each trip has a duration \texttt{tripduration}, a trip \texttt{count} (1), and a \texttt{day\_number} (ranging from 1 to 689). From the \texttt{trip} data frame, we created a new data frame called \texttt{ridership} that aggregates trips by day. At the end of this, \texttt{ridership} has 901 rows (days) and 3 columns (variables): \texttt{count}, \texttt{tripduration}, and \texttt{day\_number}.
+
+From the \texttt{weather} data frame, we used the mapping created for the \texttt{trip} data set to map unique dates to the natural numbers. We also created a new variable, \texttt{temp\_range}, by computing the difference between \texttt{Max\_Temperature\_F} and \texttt{Min\_TemperatureF} for each day. Because the \texttt{trip} data covers 212 days after the last observation in the \texttt{weather} data, we want to keep only the observations in \texttt{trip} that match the observations in the smaller data frame, \texttt{weather}. We created our final data frame, \texttt{df}, by left joining weather and ridership by \texttt{day\_number}. The final data frame contains 689 rows (days) and 25 columns (variables). The variable names are listed in a table below with brief descriptions.
+
+```{r rtable, echo = FALSE}
+# Create a data frame with variable names and descriptions
+variable_descriptions <- data.frame(
+  Variable = c(
+    "Max_Temperature_F", "Mean_Temperature_F", "Min_TemperatureF",
+    "Max_Dew_Point_F", "MeanDew_Point_F", "Min_Dewpoint_F",
+    "Max_Humidity", "Mean_Humidity", "Min_Humidity",
+    "Max_Sea_Level_Pressure_In", "Mean_Sea_Level_Pressure_In", "Min_Sea_Level_Pressure_In",
+    "Max_Visibility_Miles", "Mean_Visibility_Miles", "Min_Visibility_Miles",
+    "Max_Wind_Speed_MPH", "Mean_Wind_Speed_MPH", "Max_Gust_Speed_MPH",
+    "Precipitation_In", "Events", "temp_range", "date", "day_number",
+    "total_trips", "total_durations"
+  ),
+  Description = c(
+    "Maximum temperature in Fahrenheit recorded that day",
+    "Mean temperature in Fahrenheit recorded that day",
+    "Minimum temperature in Fahrenheit recorded that day",
+    "Maximum dew point in Fahrenheit recorded that day",
+    "Mean dew point in Fahrenheit recorded that day",
+    "Minimum dew point in Fahrenheit recorded that day",
+    "Maximum humidity percentage recorded that day",
+    "Mean humidity percentage recorded that day",
+    "Minimum humidity percentage recorded that day",
+    "Maximum sea-level pressure in inches recorded that day",
+    "Mean sea-level pressure in inches recorded that day",
+    "Minimum sea-level pressure in inches recorded that day",
+    "Maximum visibility in miles recorded that day",
+    "Mean visibility in miles recorded that day",
+    "Minimum visibility in miles recorded that day",
+    "Maximum wind speed in miles per hour recorded that day",
+    "Mean wind speed in miles per hour recorded that day",
+    "Maximum gust speed in miles per hour recorded that day",
+    "Precipitation in inches recorded that day",
+    "Weather events (e.g., Rain, Snow) that occurred that day",
+    "Temperature range (Max_Temperature_F - Min_TemperatureF)",
+    "Date of the observation",
+    "Days since 13 October 2014",
+    "Total trips recorded that day",
+    "Total duration of all trips recorded that day in seconds"
+  )
+)
+
+# Render the table using kable
+knitr::kable(variable_descriptions, col.names = c("Variable", "Description"), caption = "Variable Descriptions (689 rows, 25 columns)")
+
+```
 
 # Methods/ Analysis
 ```{r plot predictors, echo=FALSE}
@@ -245,60 +315,7 @@ cor(df$total_durations, df$MeanDew_Point_F)
 ```
 
 
-## Data selection
 
-The \texttt{trip} data frame contains 175,091 cases (or rides) and 12 variables describing each ride. The weather data frame contains 689 cases (or days) and 21 variables describing the weather that day. Ultimately, our goal is to join these two data frames We began by aggregating trip data for each day we have data for. 
-
-From the \texttt{trip} data frame, we selected only two variables: \texttt{start\_time} and \texttt{tripduration}. We stripped the date from the \texttt{start\_time} (encoded in the format \texttt{\%m/\%d/\%Y \%H:\%M}), collected the unique dates, and mapped unique dates to the natural numbers. The mapping was represented by a new variable called \texttt{day\_number}. We also added a column of ones called \texttt{count} so that each trip represented a single trip (this would make it easier to sum trips by day). Now, each trip has a duration \texttt{tripduration}, a trip \texttt{count} (1), and a \texttt{day\_number} (ranging from 1 to 689). From the \texttt{trip} data frame, we created a new data frame called \texttt{ridership} that aggregates trips by day. At the end of this, \texttt{ridership} has 901 rows (days) and 3 columns (variables): \texttt{count}, \texttt{tripduration}, and \texttt{day\_number}.
-
-From the \texttt{weather} data frame, we used the mapping created for the \texttt{trip} data set to map unique dates to the natural numbers. We also created a new variable, \texttt{temp\_range}, by computing the difference between \texttt{Max\_Temperature\_F} and \texttt{Min\_TemperatureF} for each day. Because the \texttt{trip} data covers 212 days after the last observation in the \texttt{weather} data, we want to keep only the observations in \texttt{trip} that match the observations in the smaller data frame, \texttt{weather}. We created our final data frame, \texttt{df}, by left joining weather and ridership by \texttt{day\_number}. The final data frame contains 689 rows (days) and 25 columns (variables). The variable names are listed in a table below with brief descriptions.
-
-```{r rtable, echo = FALSE}
-# Create a data frame with variable names and descriptions
-variable_descriptions <- data.frame(
-  Variable = c(
-    "Max_Temperature_F", "Mean_Temperature_F", "Min_TemperatureF",
-    "Max_Dew_Point_F", "MeanDew_Point_F", "Min_Dewpoint_F",
-    "Max_Humidity", "Mean_Humidity", "Min_Humidity",
-    "Max_Sea_Level_Pressure_In", "Mean_Sea_Level_Pressure_In", "Min_Sea_Level_Pressure_In",
-    "Max_Visibility_Miles", "Mean_Visibility_Miles", "Min_Visibility_Miles",
-    "Max_Wind_Speed_MPH", "Mean_Wind_Speed_MPH", "Max_Gust_Speed_MPH",
-    "Precipitation_In", "Events", "temp_range", "date", "day_number",
-    "total_trips", "total_durations"
-  ),
-  Description = c(
-    "Maximum temperature in Fahrenheit recorded that day",
-    "Mean temperature in Fahrenheit recorded that day",
-    "Minimum temperature in Fahrenheit recorded that day",
-    "Maximum dew point in Fahrenheit recorded that day",
-    "Mean dew point in Fahrenheit recorded that day",
-    "Minimum dew point in Fahrenheit recorded that day",
-    "Maximum humidity percentage recorded that day",
-    "Mean humidity percentage recorded that day",
-    "Minimum humidity percentage recorded that day",
-    "Maximum sea-level pressure in inches recorded that day",
-    "Mean sea-level pressure in inches recorded that day",
-    "Minimum sea-level pressure in inches recorded that day",
-    "Maximum visibility in miles recorded that day",
-    "Mean visibility in miles recorded that day",
-    "Minimum visibility in miles recorded that day",
-    "Maximum wind speed in miles per hour recorded that day",
-    "Mean wind speed in miles per hour recorded that day",
-    "Maximum gust speed in miles per hour recorded that day",
-    "Precipitation in inches recorded that day",
-    "Weather events (e.g., Rain, Snow) that occurred that day",
-    "Temperature range (Max_Temperature_F - Min_TemperatureF)",
-    "Date of the observation",
-    "Days since 13 October 2014",
-    "Total trips recorded that day",
-    "Total duration of all trips recorded that day in seconds"
-  )
-)
-
-# Render the table using kable
-knitr::kable(variable_descriptions, col.names = c("Variable", "Description"), caption = "Variable Descriptions (689 rows, 25 columns)")
-
-```
 
 ## Model Selection
 
@@ -308,11 +325,11 @@ The equation for our final regression model is:
 
   \texttt{total\_trips} = 277.1643 – 4.95(\texttt{Mean\_Humidity}) + 5.90(\texttt{MeanDew\_Point}) – 118.151(\texttt{Precipitation\_In}) – 7.91(\texttt{Mean\_Wind\_Speed}) + 2.94(\texttt{Max\_Temperature})
 
-Each regressor is significant at at least the 0.01 level, and the diagnostic plots look good. 
+Each regressor is significant to at least the 0.01 level, and the diagnostic plots are satisfactory. The residual plot moving-average looks flat. The normal quantile plot has few departures from the line. The scale location plot is relatively flat, indicating constant variance across fitted values. 
 
-In order to obtain this model, we first did some exploratory data analysis, plotting total trips against certain variables and obtaining their correlation. We then several basic (one regressor) linear models of total_trips vs some of our variables. The variables that we considered were: mean temperature, mean humidity, mean dew point, precipitation in inches, mean wind speed, mean miles of visibility, mean sea level pressure,  temperature range, and max temperature. These were the original variables we considered on account of the fact that they: 1.seemed to have some relationship with total trips based on plots and correlation, and 2. made sense to us as predictors of ridership from an intuitive perspective. After trying several single variable models, we found that few of them had very high R^2, with a  notable exception that a weighted least squares model of wind speed high worked very well. We then decided to make a “full” model with all of the variables above, except only using mean temperature instead of temperature range and max temperature as 1. mean and max were extremely highly correlated (>97%) and 2. we thought 2 temperature variables would be redundant. The output of the full model showed that Mean temperature, mean visibility miles, and mean sea level pressure did not have coefficients that were significantly different from zero. We made a model dropping these parameters and then did an anova (partial f) between the two models to see if we could justifiably drop them and it showed that we could. At this point all of the predictors were significant and the adjusted R^2 was 0.7095. However, we got the idea to try adding temperature range or max temperature to this model. Including temperature range did not improve the R^2, and it was not significant in the model, however, including max temperature did improve the adjusted R^2 and the regressor was also significant. We decided that this would be our final model. Each regressor is significant at at least the 0.01 level, and the diagnostic plots look good. The adjusted R^2 is 0.712. 
+In order to obtain this model, we first did some exploratory data analysis, plotting total trips against certain variables and obtaining their correlation. We then attemped several basic (single regressor) linear models of total_trips vs some of our variables. The variables that we considered were: mean temperature, mean humidity, mean dew point, precipitation in inches, mean wind speed, mean miles of visibility, mean sea level pressure,  temperature range, and max temperature. These were the original variables we considered on account of the fact that they seemed to have some relationship with total trips based on plots and correlation, and made sense to us as predictors of ridership from an intuitive perspective. After trying several single variable models, we found that few of them had very high R^2, with a  notable exception that a weighted least squares model of wind speed high worked very well. We then decided to make a “full” model with all of the variables above, except only using mean temperature instead of temperature range and max temperature as 1. mean and max were extremely highly correlated (>97%) and 2. we thought two temperature variables would be redundant. The output of the full model showed that Mean temperature, mean visibility miles, and mean sea level pressure did not have coefficients that were significantly different from zero. We made a model dropping these parameters and then did an anova (partial f) between the two models to see if we could justifiably drop them and it showed that we could. At this point all of the predictors were significant and the adjusted R^2 was 0.7095. However, we got the idea to try adding temperature range or max temperature to this model. Including temperature range did not improve the R^2, and it was not significant in the model, however, including max temperature did improve the adjusted R^2 and the regressor was also significant. We decided that this would be our final model. Each regressor is significant at at least the 0.01 level, and the diagnostic plots look good. The adjusted R^2 is 0.712. 
 We also tried to use powerTransformations, but it only worked for some of the variables as others did not have strictly positive values. For the variables that did successfully power transform, the adjusted R^2 of the subsequent model was not greatly improved and few of the regressors were significant. 
-Our final model has some nice properties, in that the diagnostic plots show that it satisfies the assumptions for linear regression well, it is perfectly basic in terms of transportations, and partly on account of that, it is not too difficult to interpret. 
+Our final model has some nice properties, in that the diagnostic plots show that it satisfies the assumptions for linear regression well, it is perfectly basic in terms of transformations, and partly on account of that, it is not too difficult to interpret. 
 In terms of interpretation, our model predicts that holding all else equal, every 1% increase in average humidity will lead the total number of bike trips to decrease by 4.95. It predicts that holding all else equal, for every 1 degree increase in the average dew point (Fahrenheit for this and all future mentions of degrees) Seattle will see a drop in bike trips of 5.90.  Our model predicts that all else equal, for every 1 extra inch of precipitation, total bike rides will drop by 118. It also predicts that holding all else equal, a 1 mile per hour increase in the average wind speed will decrease total bike trips by 7.91. Lastly our model predicts that holding all else equal, a 1 degree increase in the maximum temperature will increase the number of bike trips by 2.94. 
 
 ```{r final model, echo = FALSE}
@@ -329,7 +346,10 @@ plot(partialmodel3)
 pairs(~Mean_Humidity + MeanDew_Point_F + Precipitation_In + Mean_Wind_Speed_MPH + Max_Temperature_F, data = df)
 ```
 
+## Cross Validation
 
+# Conclusion
+Our work here suggests a path forward for bike share systems looking to bolster their operations and planning with weather data. However, Seattle is a city with temperate weather/climate. These results are not readily generalizable to all cities because when its too hot, people will also not ride bike!
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
